--- a/src/app/CRM/main-crm/main-crm.component.html
+++ b/src/app/CRM/main-crm/main-crm.component.html
@@ -24,10 +24,8 @@
         </div>
       </section><!-- End Breadcrumbs -->
   
-   
-  
       <!-- ======= CRM Section ======= -->
-      <a [routerLink]="['CrmClientsComponent']">Are you looking for acquiring new clients?</a>
+      <h2>Are you looking for acquiring new clients?</h2>
 
       <router-outlet></router-outlet>
     </main><!-- End #main -->
