--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
           <li><a class="active" [routerLink]="['/vitrine']">Home</a></li>
           <li><a [routerLink]="['/vitrine']">About</a></li>
           <li><a [routerLink]="['/MainServiceComponent']">Services</a></li>
-          <li><a [routerLink]="['/MainEntrepriseListComponent']">Ads</a></li>
+          <li><a [routerLink]="['/MainAnnonceListComponent']">Annonces</a></li>
           <li><a [routerLink]="['/vitrine']">Testimonials</a></li>
           <li><a [routerLink]="['/vitrine']">Pricing</a></li>
           <li><a [routerLink]="['/blog']">Blog</a></li>
